<resources>
    <string name="login_app_name">LoginModule</string>
    <string name="login_phone_hint">点击输入</string>
    <string name="login_password_hint">点击输入密码</string>
    <string name="login_login_content">登录</string>
    <string name="login_register_content">注册</string>
    <string name="login_continue_content">继续</string>
    <string name="login_finish_content">完成</string>
    <string name="login_register_password_content">至少6位</string>
    <string name="login_phone_error">非法电话号码</string>
    <string name="login_password_error">密码错误</string>
    <string name="login_old_password">请输入原密码</string>
    <string name="login_new_password">请输入新密码,至少6位</string>
    <string name="login_new_password_again">请再次输入新密码，至少6位</string>
    <string name="login_mine_attention_not_data">暂时没有关注任何人噢！</string>
    <string name="login_mine_collect_not_data">暂时没有收藏任何视频噢！</string>
</resources>
