<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/base_normal_back_title_bar"/>

    <android.support.constraint.Guideline
        android:id="@+id/title_guide_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="原密码："
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/change_password_old"
        app:layout_constraintBottom_toTopOf="@id/change_password_old"
        />

    <EditText
        android:id="@+id/change_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_old_password"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_guide_line"
       />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="新密码："
    android:layout_marginBottom="10dp"
    app:layout_constraintLeft_toLeftOf="@id/change_password_new"
    app:layout_constraintBottom_toTopOf="@id/change_password_new"
    />

    <EditText
        android:id="@+id/change_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_new_password"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/change_password_old"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="确认密码："
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/change_password_new_again"
        app:layout_constraintBottom_toTopOf="@id/change_password_new_again"
        />

    <EditText
        android:id="@+id/change_password_new_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_new_password_again"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/change_password_new"
        />

    <Button
        android:id="@+id/change_password_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_continue_content"
        android:background="@drawable/base_radius2_button"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/change_password_new_again"
        />



</android.support.constraint.ConstraintLayout>