<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/title"
        app:layout_constraintVertical_chainStyle="spread_inside"
        layout="@layout/base_normal_back_title_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/base_logo_36px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_guide_line"
        app:layout_constraintBottom_toTopOf="@id/account_phone"
        />

    <android.support.constraint.Guideline
        android:id="@+id/title_guide_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"
        />

    <android.support.constraint.Guideline
        android:id="@+id/center_guide_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="手机号："
        app:layout_constraintLeft_toLeftOf="@id/account_phone"
        app:layout_constraintBottom_toTopOf="@id/account_phone"
        />


    <EditText
        android:id="@+id/account_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:digits="1234567890"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/center_guide_line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="密码："
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@id/account_password"
        app:layout_constraintBottom_toTopOf="@id/account_password"
        />

    <EditText
        android:id="@+id/account_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/center_guide_line"
        />


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_login_content"
        android:background="@drawable/base_radius2_button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/account_password"
        />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register_content"
        android:background="@drawable/base_radius_button"
        android:layout_marginTop="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/login"
        />




</android.support.constraint.ConstraintLayout>