<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include layout="@layout/base_normal_back_title_bar"/>

    <android.support.constraint.Guideline
        android:id="@+id/title_guide_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="手机号："
        android:textColor="@color/base_colorPrimary"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_phone"
        app:layout_constraintBottom_toTopOf="@id/register_phone"
        />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_phone_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:digits="1234567890"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_guide_line"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="用户名："
        android:textColor="@color/base_colorPrimary"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_account_name"
        app:layout_constraintBottom_toTopOf="@id/register_account_name"
        />

    <EditText
        android:id="@+id/register_account_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_phone_hint"
        android:inputType="text"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_phone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="性别："
        android:textColor="@color/base_colorPrimary"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_gender"
        app:layout_constraintBottom_toTopOf="@id/register_gender"
        />

    <RadioGroup
        android:id="@+id/register_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/gender_man"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_account_name"
        >

        <RadioButton
            android:id="@+id/gender_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:textSize="16sp"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="女"
            android:textSize="16sp"
            android:layout_weight="1"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="密码："
        android:textColor="@color/base_colorPrimary"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="@id/register_password"
        app:layout_constraintBottom_toTopOf="@id/register_password"
        />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_register_password_content"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_gender"
        />



    <Button
        android:id="@+id/register_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_continue_content"
        android:background="@drawable/base_radius2_button"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        />


</android.support.constraint.ConstraintLayout>